CC worker occasionally fails because of missing certs
- We observed failures to delete orgs and associated error logs
indicated that the CC worker was attempting to open a CA file for
Eirini. The corresponding volume mount was missing in this deployment,
so we added it in the same way as the API server's deployment

[#171261206]

Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -27,8 +27,15 @@ spec:
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
+          #@ if/end data.values.eirini.serverCerts.secretName:
+          - name: eirini-certs
+            mountPath: /config/eirini/certs
       volumes:
       - name: cloud-controller-ng-yaml
         configMap:
           name: cloud-controller-ng-yaml
+      #@ if/end data.values.eirini.serverCerts.secretName:
+      - name: eirini-certs
+        secret:
+          secretName: #@ data.values.eirini.serverCerts.secretName
 
