Use config file for blobstore url (not hard-coded) * Also update values.yml to point to the blobstore url we had been using (for minikube)
Co-authored-by: Seth Boyles <sboyles@pivotal.io>
Co-authored-by: Renee Chu <rchu@pivotal.io>

--- a/values.yml
+++ b/values.yml
@@ -25,7 +25,7 @@ ccdb:
   database: cloud_controller
 
 blobstore:
-  endpoint: http://capi-blobstore-minio:9000
+  endpoint: http://capi-blobstore-minio.default:9000
   access_key_id: AKIAIOSFODNN7EXAMPLE
   secret_access_key: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 
