--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -162,7 +162,7 @@ resource_pool:
   blobstore_type: fog
   fog_connection:
     provider: AWS
-    endpoint: http://capi-blobstore-minio.default:9000 #! TODO: minio shouldnt require default namespace
+    endpoint: #@ data.values.blobstore.endpoint
     aws_access_key_id: #@ data.values.blobstore.access_key_id
     aws_secret_access_key: #@ data.values.blobstore.secret_access_key
     aws_signature_version: '2'
@@ -183,7 +183,7 @@ packages:
   blobstore_type: fog
   fog_connection:
     provider: AWS
-    endpoint: http://capi-blobstore-minio.default:9000 #! TODO: minio shouldnt require default namespace
+    endpoint: #@ data.values.blobstore.endpoint
     aws_access_key_id: #@ data.values.blobstore.access_key_id
     aws_secret_access_key: #@ data.values.blobstore.secret_access_key
     aws_signature_version: '2'
@@ -204,7 +204,7 @@ droplets:
   blobstore_type: fog
   fog_connection:
     provider: AWS
-    endpoint: http://capi-blobstore-minio.default:9000 #! TODO: minio shouldnt require default namespace
+    endpoint: #@ data.values.blobstore.endpoint
     aws_access_key_id: #@ data.values.blobstore.access_key_id
     aws_secret_access_key: #@ data.values.blobstore.secret_access_key
     aws_signature_version: '2'
@@ -224,7 +224,7 @@ buildpacks:
   blobstore_type: fog
   fog_connection:
     provider: AWS
-    endpoint: http://capi-blobstore-minio.default:9000 #! TODO: minio shouldnt require default namespace
+    endpoint: #@ data.values.blobstore.endpoint
     aws_access_key_id: #@ data.values.blobstore.access_key_id
     aws_secret_access_key: #@ data.values.blobstore.secret_access_key
     aws_signature_version: '2'
