--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -78,6 +78,7 @@ logging:
 logcache:
   host: #@ "log-cache.{}".format(data.values.system_domain)
   port: 8080
+  temporary_ignore_server_unavailable_errors: true
 
 logcache_tls:
   key_file: "/dev/null"
