--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -340,6 +340,8 @@ perm:
 max_labels_per_resource: 50
 max_annotations_per_resource: 200
 
+default_app_lifecycle: kpack
+
 #! worker property
 perform_blob_cleanup: true
 
