Create nginx image with an upload module
- rollout script now updates local cf-for-k8s directory with local
capi-k8s-release directory changes and deploys
- default nginx image is updated to use this new image we've made
- hardcoded `/tmp/uploads` as the directory nginx will place uploads

[finishes #171474450]

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Will Pragnell <wpragnell@pivotal.io>

--- a/values.yml
+++ b/values.yml
@@ -4,13 +4,9 @@ replicaCount: 1
 
 images:
   ccng: cloudfoundry/cloud-controller-ng
-  nginx: nginx:latest
+  nginx: cloudfoundry/capi:nginx
 namespace: cf-system
 
-nginx:
-  image:
-    repository: "nginx"
-    tag: latest
 imagePullSecrets:
 
 app_domains: []
