add readiness ports & probes to non-http server jobs
* appeases failures on ccng master

Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -28,6 +28,10 @@ spec:
           args: ["exec", "rake", "deployment_updater:start"]
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
+          readinessProbe:
+            tcpSocket:
+              port: 4445
+            periodSeconds: 3
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
