--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -5,6 +5,11 @@ local_route: 0.0.0.0
 
 external_port: 9022
 tls_port: 9023
+readiness_ports:
+  cloud_controller_worker: 4444
+  cc_deployment_updater: 4445
+  cloud_controller_clock: 4446
+
 internal_service_hostname: cloud_controller_ng
 
 pid_filename: /cloud_controller_ng/cloud_controller_ng.pid
