--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -44,6 +44,9 @@ spec:
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
+          #@ if/end data.values.metric_proxy.serverCerts.secretName:
+          - name: metric-proxy-certs
+            mountPath: /config/metric_proxy/certs
         - name: capi-local-worker
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
@@ -89,6 +92,10 @@ spec:
       - name: eirini-certs
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
+      #@ if/end data.values.metric_proxy.serverCerts.secretName:
+      - name: metric-proxy-certs
+        secret:
+          secretName: #@ data.values.metric_proxy.serverCerts.secretName
       - name: nginx-uploads
         emptyDir: {}
 
