--- a/values.yml
+++ b/values.yml
@@ -44,6 +44,10 @@ eirini:
   serverCerts:
     secretName:
 
+metric_proxy:
+  serverCerts:
+    secretName:
+
 apiServer:
   opi:  #! these certs were manually generated for dev purposes, they are not real eirini certs and don't have SANs.
     client_key: |
