Change keys to match what's in metric-proxy

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -86,9 +86,15 @@ logcache:
   temporary_ignore_server_unavailable_errors: true
 
 logcache_tls:
-  ca_file: "/config/metric_proxy_ca/certs/tls.ca"
+  #@ if data.values.metric_proxy.tls_secret:
+  ca_file: "/config/metric_proxy_ca/ca/tls.crt"
   cert_file: "/config/metric_proxy/certs/tls.crt"
   key_file: "/config/metric_proxy/certs/tls.key"
+  #@ else:
+  ca_file: "/dev/null"
+  cert_file: "/dev/null"
+  key_file: "/dev/null"
+  #@ end
   subject_name: metric-proxy
 
 loggregator:
