--- a/values.yml
+++ b/values.yml
@@ -45,8 +45,8 @@ eirini:
     secretName:
 
 metric_proxy:
-  serverCerts:
-    secretName:
+  tls_secret:
+  ca_secret:
 
 apiServer:
   opi:  #! these certs were manually generated for dev purposes, they are not real eirini certs and don't have SANs.
