--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -44,10 +44,10 @@ spec:
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
-          #@ if/end data.values.metric_proxy.tls_secret:
+          #@ if/end data.values.metric_proxy.cert.secret_name:
           - name: metric-proxy-certs
             mountPath: /config/metric_proxy/certs
-          #@ if/end data.values.metric_proxy.ca_secret:
+          #@ if/end data.values.metric_proxy.ca.secret_name:
           - name: metric-proxy-ca
             mountPath: /config/metric_proxy/ca
         - name: capi-local-worker
@@ -95,14 +95,14 @@ spec:
       - name: eirini-certs
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
-      #@ if/end data.values.metric_proxy.tls_secret:
+      #@ if/end data.values.metric_proxy.cert.secret_name:
       - name: metric-proxy-certs
         secret:
-          secretName: #@ data.values.metric_proxy.tls_secret
-      - name: nginx-uploads
-        emptyDir: {}
-      #@ if/end data.values.metric_proxy.ca_secret:
+          secretName: #@ data.values.metric_proxy.cert.secret_name
+      #@ if/end data.values.metric_proxy.ca.secret_name:
       - name: metric-proxy-ca
         secret:
-          secretName: #@ data.values.metric_proxy.ca_secret
+          secretName: #@ data.values.metric_proxy.ca.secret_name
+      - name: nginx-uploads
+        emptyDir: {}
 
