--- a/values.yml
+++ b/values.yml
@@ -45,8 +45,10 @@ eirini:
     secretName:
 
 metric_proxy:
-  tls_secret:
-  ca_secret:
+  ca:
+    secret_name:
+  cert:
+    secret_name:
 
 apiServer:
   opi:  #! these certs were manually generated for dev purposes, they are not real eirini certs and don't have SANs.
