Add custom_metric_tags config property
[#171285377]

Co-authored-by: Seth Boyles <sboyles@pivotal.io>
Co-authored-by: Chris Tarazi <ctarazi@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -389,3 +389,5 @@ pending_droplets:
 deployment_updater:
   update_frequency_in_seconds: 1
 #@ end
+
+custom_metric_tags: #@ data.values.custom_metric_tags
