--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -55,7 +55,7 @@ nginx:
 index: 0
 name: ""
 route_services_enabled: true
-volume_services_enabled: false
+volume_services_enabled: true
 
 info:
   name: ""
