wip: build-and-rollout.sh
uses kbld to rebuild ccng image, plug that into
capi-k8s-release/values.yml, then bump cf-for-k8s and deploy

broken right now because kbld is bad at respecting tag length limits

to use, call ./scripts/build-and-rollout.sh REGISTRY/REPO_TO_PUSH_TO

[#171776000]

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>

--- a/dev-templates/kbld.yml
+++ b/dev-templates/kbld.yml
@@ -3,12 +3,21 @@
 apiVersion: kbld.k14s.io/v1alpha1
 kind: Sources
 sources:
-  - image: cloudfoundry/cloud-controller-ng
+  - imageRepo: cloudfoundry/cloud-controller-ng
+    path: src/cloud_controller_ng
+  - imageRepo: #@ data.values.kbld.destination
     path: src/cloud_controller_ng
 
 ---
 apiVersion: kbld.k14s.io/v1alpha1
 kind: ImageDestinations
 destinations:
-  - image: cloudfoundry/cloud-controller-ng
+  - imageRepo: cloudfoundry/cloud-controller-ng
     newImage: #@ data.values.kbld.destination
+  - imageRepo: #@ data.values.kbld.destination
+    newImage: #@ data.values.kbld.destination
+---
+apiVersion: kbld.k14s.io/v1alpha1
+kind: ImageKeys
+keys:
+- ccng
