Use namespaced kpack `Builder`
- This allows for the use of `ImagePullSecrets` for the builder image,
which is not allowed for the previous `CustomBuilder`-type builder
- Moves kpack builds to their own namespace - defaulted to
`cf-workloads-staging`, where the builder also lives
- Update ccng image to take this into account

[#171956320]

Authored-by: Chris Selzo <cselzo@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -361,7 +361,7 @@ kubernetes:
     token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
   ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
   kpack:
-    builder_namespace: #@ data.values.system_namespace
+    builder_namespace: #@ data.values.staging_namespace
     registry_service_account_name: cc-kpack-registry-service-account
     registry_tag_base: #@ "{}/{}".format(data.values.kpack.registry.hostname, data.values.kpack.registry.repository)
 
