--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cc-kpack-registry-auth-secret
-  namespace: #@ data.values.system_namespace
+  namespace: #@ data.values.staging_namespace
   annotations:
     build.pivotal.io/docker: #@ data.values.kpack.registry.hostname
 type: kubernetes.io/basic-auth
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: cc-kpack-registry-service-account
-  namespace: #@ data.values.system_namespace
+  namespace: #@ data.values.staging_namespace
 secrets:
   - name: cc-kpack-registry-auth-secret
 
