Do not try to interpolate image location from hostname
Instead, require folks to pass in the qualified built app image registry
location directly to kpack.  This allows for dockerhub to be the
destination, in addition to other registries such as gcr.

See https://github.com/cloudfoundry/cf-for-k8s/issues/71

Fixes https://github.com/cloudfoundry/capi-k8s-release/issues/23

[Finishes #171903189]

Authored-by: Chris Selzo <cselzo@pivotal.io>

--- a/values.yml
+++ b/values.yml
@@ -121,7 +121,7 @@ kbld:
 
 kpack:
   registry:
-    hostname: ""
-    repository: ""
+    hostname: "" #! Used to fill in the hostname of the kpack registry auth secret
+    repository: "" #! Passed as spec.tag to the kpack Image resource
     username: ""
     password: ""
