--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -363,7 +363,7 @@ kubernetes:
   kpack:
     builder_namespace: #@ data.values.staging_namespace
     registry_service_account_name: cc-kpack-registry-service-account
-    registry_tag_base: #@ "{}/{}".format(data.values.kpack.registry.hostname, data.values.kpack.registry.repository)
+    registry_tag_base: #@ data.values.kpack.registry.repository
 
 #! worker property
 perform_blob_cleanup: true
