wip - added image watcher
- image creation and update events are now logged
- 2 events occur simultaneously when builder image is changed, causing a
race condition for updating the statefulset's opi container's image with
the image's latest image reference.

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/capi-kpack-watcher-deployment.yml
+++ b/templates/capi-kpack-watcher-deployment.yml
@@ -22,7 +22,7 @@ spec:
       labels:
         app.kubernetes.io/name: capi-kpack-watcher
     spec:
-      serviceAccountName: default
+      serviceAccountName: cc-api-service-account
       containers:
         - name: capi-kpack-watcher
           image: #@ data.values.images.capi_kpack_watcher
