--- a/dockerfiles/capi-kpack-watcher/Dockerfile
+++ b/dockerfiles/capi-kpack-watcher/Dockerfile
@@ -15,7 +15,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a
 
 # Use distroless as minimal base image to package the manager binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
-FROM gcr.io/distroless/static:nonroot
+FROM cloudfoundry/run:tiny
 WORKDIR /
 COPY --from=builder /capi-kpack-watcher/capi_kpack_watcher .
 USER nonroot:nonroot
