--- a/src/capi-kpack-watcher/Dockerfile
+++ b/src/capi-kpack-watcher/Dockerfile
@@ -10,7 +10,7 @@ COPY go.sum .
 RUN go mod download
 
 # Build
-COPY .
+COPY / .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GO111MODULE=on go build -a
 
 # Use distroless as minimal base image to package the manager binary
