Remove ccng submodule
* Was only used for building dev images
* definitely caused CI errors with us pushing invalid submodule
references
* legacy mindset in having submodules like a bosh-release

Co-authored-by: Aakash Shah <ashah@pivotal.io>
Co-authored-by: Chris Selzo <cselzo@pivotal.io>

--- a/dev-templates/kbld.yml
+++ b/dev-templates/kbld.yml
@@ -4,9 +4,9 @@ apiVersion: kbld.k14s.io/v1alpha1
 kind: Sources
 sources:
   - imageRepo: cloudfoundry/cloud-controller-ng
-    path: src/cloud_controller_ng
+    path: #@ data.values.ccng_dir
   - imageRepo: #@ data.values.kbld.destination
-    path: src/cloud_controller_ng
+    path: #@ data.values.ccng_dir
 
 ---
 apiVersion: kbld.k14s.io/v1alpha1
