DB migration job now works with Istio sidecars
- Specifically when the DB it's talking to also has sidecar injection
enabled in an environment with strict Istio sidecar-based mTLS

[#171388449]

Co-authored-by: Sannidhi Jalukar <sjalukar@pivotal.io>

--- a/templates/ccdb-migrate-job.yaml
+++ b/templates/ccdb-migrate-job.yaml
@@ -7,15 +7,17 @@ metadata:
   namespace: #@ data.values.system_namespace
 spec:
   template:
-    metadata:
-      annotations:
-        sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: run-migrations
         image: #@ data.values.images.ccng
         imagePullPolicy: Always
-        command: ['bundle', 'exec', 'rake', 'db:setup_database']
+        command: ["/bin/bash", "-c"]
+        args:
+        - |
+          bundle exec rake db:wait_for_istio && \
+          bundle exec rake db:setup_database && \
+          bundle exec rake db:terminate_istio
         volumeMounts:
         - name: cloud-controller-ng-yaml
           mountPath: /config
