--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -99,7 +99,7 @@ logcache_tls:
 
 loggregator:
   router: 127.0.0.1:3457
-  internal_url: #@ "https://log-api.{}:8081".format(data.values.system_domain)
+  internal_url: #@ "https://log-api.{}.svc.cluster.local:8081".format(data.values.system_namespace)
 log_stream:
   url: #@ "https://log-stream.{}".format(data.values.system_domain)
 
