Add Job update strategy "fallback-on-replace" per Dmitiry's suggestion
[#171388449]

Authored-by: Renee Chu <rchu@pivotal.io>

--- a/templates/ccdb-migrate-job.yaml
+++ b/templates/ccdb-migrate-job.yaml
@@ -5,6 +5,8 @@ kind: Job
 metadata:
   name: ccdb-migrate
   namespace: #@ data.values.system_namespace
+  annotations:
+    kapp.k14s.io/update-strategy: fallback-on-replace
 spec:
   template:
     spec:
