Add k8s service-account to Worker
* For operations that happen in async such as AppDelete, the worker
needs to have sufficient credentials to make requests to the K8s API.

[#171900207]

Co-authored-by: Aakash Shah <ashah@pivotal.io>
Co-authored-by: Sannidhi Jalukar <sjalukar@pivotal.io>

--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -34,6 +34,7 @@ spec:
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
+      serviceAccountName: cc-worker-service-account
       volumes:
       - name: cloud-controller-ng-yaml
         configMap:
