--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -19,6 +19,26 @@ roleRef:
   name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
 
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: cc-worker-service-account
+  namespace: #@ data.values.system_namespace
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cc-worker-service-account-superuser
+subjects:
+- kind: ServiceAccount
+  name: cc-worker-service-account
+  namespace: #@ data.values.system_namespace
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+
 #! kpack registry credentials
 ---
 apiVersion: v1
