Add config property for namespace to place route CRs in
[#171826991]

Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Jennifer Spinney <jspinney@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -360,6 +360,7 @@ kubernetes:
   service_account:
     token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
   ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+  workloads_namespace: cf-workloads
   kpack:
     builder_namespace: #@ data.values.staging_namespace
     registry_service_account_name: cc-kpack-registry-service-account
