Dev scripts now also builds kpack-watcher image
- `scripts/build-and-rollout.sh` now also builds+deploys the
capi-kpack-watcher's Docker image

[#171713645]

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/dev-templates/_dev-values.yml
+++ b/dev-templates/_dev-values.yml
@@ -1,5 +1,9 @@
 #@data/values
 ---
 kbld:
-  destination: ""
-ccng_dir: ""
+  destination:
+    ccng: ""
+    capi_kpack_watcher: ""
+src_dirs:
+  ccng: ""
+  capi_kpack_watcher: ""
