Fixed default blobstore region to be empty string
[#171904164]

Authored-by: Piyali Banerjee <pbanerjee@pivotal.io>

--- a/values.yml
+++ b/values.yml
@@ -25,7 +25,7 @@ ccdb:
   database: cloud_controller
 
 blobstore:
-  region: "''"
+  region: ""
   package_directory_key: cc-packages
   droplet_directory_key: cc-droplets
   resource_directory_key: cc-resources
