--- a/templates/capi-kpack-watcher-deployment.yml
+++ b/templates/capi-kpack-watcher-deployment.yml
@@ -3,11 +3,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: capi-kpack-watcher
+  name: cf-api-kpack-watcher
   namespace: #@ data.values.system_namespace
   labels:
-    app.kubernetes.io/name: capi-kpack-watcher
-    app.kubernetes.io/instance: capi-kpack-watcher-0
+    app.kubernetes.io/name: cf-api-kpack-watcher
+    app.kubernetes.io/instance: cf-api-kpack-watcher-0
 spec:
   replicas: 1
   strategy:
@@ -16,15 +16,15 @@ spec:
       maxUnavailable: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: capi-kpack-watcher
+      app.kubernetes.io/name: cf-api-kpack-watcher
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: capi-kpack-watcher
+        app.kubernetes.io/name: cf-api-kpack-watcher
     spec:
       serviceAccountName: default
       containers:
-        - name: capi-kpack-watcher
+        - name: cf-api-kpack-watcher
           image: #@ data.values.images.capi_kpack_watcher
           env:
           - name: UAA_CLIENT_SECRET
