Apply readiness probe to cf-api-server deployment
[#172846765]

Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -61,6 +61,10 @@ spec:
           imagePullPolicy: Always
           ports:
           - containerPort: 80
+          readinessProbe:
+            httpGet:
+              port: 80
+              path: "/healthz"
           volumeMounts:
           - name: nginx
             mountPath: /etc/nginx
