default cc log level to "info" so it doesnt spam unless you ask
Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -81,7 +81,7 @@ directories:
 logging:
   file: /dev/stdout
   syslog: vcap.cloud_controller_ng
-  level: "debug"
+  level: "info"
   max_retries: 1
 
 logcache:
