--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -173,14 +173,7 @@ default_quota_definition: default
 resource_pool:
   resource_directory_key: #@ data.values.blobstore.resource_directory_key
   blobstore_type: fog
-  fog_connection:
-    provider: AWS
-    endpoint: #@ data.values.blobstore.endpoint
-    aws_access_key_id: #@ data.values.blobstore.access_key_id
-    aws_secret_access_key: #@ data.values.blobstore.secret_access_key
-    aws_signature_version: '2'
-    region: #@ data.values.blobstore.region
-    path_style: true
+  fog_connection: #@ fog_connection()
   minimum_size: 65536
   maximum_size: 536870912
 
@@ -194,14 +187,7 @@ resource_pool:
 packages:
   app_package_directory_key: #@ data.values.blobstore.package_directory_key
   blobstore_type: fog
-  fog_connection:
-    provider: AWS
-    endpoint: #@ data.values.blobstore.endpoint
-    aws_access_key_id: #@ data.values.blobstore.access_key_id
-    aws_secret_access_key: #@ data.values.blobstore.secret_access_key
-    aws_signature_version: '2'
-    region: #@ data.values.blobstore.region
-    path_style: true
+  fog_connection: #@ fog_connection()
   max_valid_packages_stored: 5
   max_package_size: 1073741824
 
@@ -215,14 +201,7 @@ packages:
 droplets:
   droplet_directory_key: #@ data.values.blobstore.droplet_directory_key
   blobstore_type: fog
-  fog_connection:
-    provider: AWS
-    endpoint: #@ data.values.blobstore.endpoint
-    aws_access_key_id: #@ data.values.blobstore.access_key_id
-    aws_secret_access_key: #@ data.values.blobstore.secret_access_key
-    aws_signature_version: '2'
-    region: #@ data.values.blobstore.region
-    path_style: true
+  fog_connection: #@ fog_connection()
 
   cdn:
     uri:
@@ -235,14 +214,7 @@ droplets:
 buildpacks:
   buildpack_directory_key: #@ data.values.blobstore.buildpack_directory_key
   blobstore_type: fog
-  fog_connection:
-    provider: AWS
-    endpoint: #@ data.values.blobstore.endpoint
-    aws_access_key_id: #@ data.values.blobstore.access_key_id
-    aws_secret_access_key: #@ data.values.blobstore.secret_access_key
-    aws_signature_version: '2'
-    region: #@ data.values.blobstore.region
-    path_style: true
+  fog_connection: #@ fog_connection()
 
   cdn:
     uri:
