--- a/values/_default.yml
+++ b/values/_default.yml
@@ -66,12 +66,13 @@ apiServer:
       -----END RSA PRIVATE KEY-----
 app_domains: []
 blobstore:
+  provider: Minio
   access_key_id: AKIAIOSFODNN7EXAMPLE
   buildpack_directory_key: cc-buildpacks
   droplet_directory_key: cc-droplets
   endpoint: http://capi-blobstore-minio.default:9000
   package_directory_key: cc-packages
-  region: ""
+  region: ~
   resource_directory_key: cc-resources
   secret_access_key: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 ccdb:
