--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -41,6 +41,8 @@ spec:
           - name: eirini-certs
             mountPath: /config/eirini/certs
           #@ if/end data.values.metric_proxy.cert.secret_name:
+          - name: database-ca-cert
+            mountPath: /config/database/certs
           - name: metric-proxy-certs
             mountPath: /config/metric_proxy/certs
           #@ if/end data.values.metric_proxy.ca.secret_name:
@@ -56,6 +58,8 @@ spec:
             mountPath: /config/
           - name: nginx-uploads
             mountPath: /tmp/uploads
+          - name: database-ca-cert
+            mountPath: /config/database/certs
         - name: nginx
           image: #@ data.values.images.nginx
           imagePullPolicy: Always
@@ -99,6 +103,9 @@ spec:
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
       #@ if/end data.values.metric_proxy.cert.secret_name:
+      - name: database-ca-cert
+        secret:
+          secretName: database-ca-cert
       - name: metric-proxy-certs
         secret:
           secretName: #@ data.values.metric_proxy.cert.secret_name
