--- a/templates/ccdb-migrate-job.yaml
+++ b/templates/ccdb-migrate-job.yaml
@@ -24,8 +24,14 @@ spec:
         volumeMounts:
         - name: cloud-controller-ng-yaml
           mountPath: /config
+        - name: database-ca-cert
+          mountPath: /config/database/certs
       restartPolicy: OnFailure
       volumes:
       - name: cloud-controller-ng-yaml
         configMap:
           name: cloud-controller-ng-yaml
+      - name: database-ca-cert
+        secret:
+          secretName: database-ca-cert
+
