--- a/templates/deployment_updater_deployment.yml
+++ b/templates/deployment_updater_deployment.yml
@@ -35,6 +35,8 @@ spec:
           volumeMounts:
           - name: cloud-controller-ng-yaml
             mountPath: /config
+          - name: database-ca-cert
+            mountPath: /config/database/certs
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
@@ -46,3 +48,6 @@ spec:
       - name: eirini-certs
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
+      - name: database-ca-cert
+        secret:
+          secretName: database-ca-cert
