--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -34,6 +34,8 @@ spec:
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
+          - name: database-ca-cert
+            mountPath: /config/database/certs
       serviceAccountName: cf-api-worker-service-account
       volumes:
       - name: cloud-controller-ng-yaml
@@ -43,4 +45,7 @@ spec:
       - name: eirini-certs
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
+      - name: database-ca-cert
+        secret:
+          secretName: database-ca-cert
 
