--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -40,9 +40,10 @@ spec:
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
-          #@ if/end data.values.metric_proxy.cert.secret_name:
+          #@ if/end data.values.ccdb.ca_cert:
           - name: database-ca-cert
             mountPath: /config/database/certs
+          #@ if/end data.values.metric_proxy.cert.secret_name:
           - name: metric-proxy-certs
             mountPath: /config/metric_proxy/certs
           #@ if/end data.values.metric_proxy.ca.secret_name:
@@ -58,6 +59,7 @@ spec:
             mountPath: /config/
           - name: nginx-uploads
             mountPath: /tmp/uploads
+          #@ if/end data.values.ccdb.ca_cert:
           - name: database-ca-cert
             mountPath: /config/database/certs
         - name: nginx
@@ -102,10 +104,11 @@ spec:
       - name: eirini-certs
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
-      #@ if/end data.values.metric_proxy.cert.secret_name:
+      #@ if/end data.values.ccdb.ca_cert:
       - name: database-ca-cert
         secret:
           secretName: database-ca-cert
+      #@ if/end data.values.metric_proxy.cert.secret_name:
       - name: metric-proxy-certs
         secret:
           secretName: #@ data.values.metric_proxy.cert.secret_name
