--- a/templates/worker_deployment.yml
+++ b/templates/worker_deployment.yml
@@ -34,6 +34,7 @@ spec:
           #@ if/end data.values.eirini.serverCerts.secretName:
           - name: eirini-certs
             mountPath: /config/eirini/certs
+          #@ if/end data.values.ccdb.ca_cert:
           - name: database-ca-cert
             mountPath: /config/database/certs
       serviceAccountName: cf-api-worker-service-account
@@ -45,6 +46,7 @@ spec:
       - name: eirini-certs
         secret:
           secretName: #@ data.values.eirini.serverCerts.secretName
+      #@ if/end data.values.ccdb.ca_cert:
       - name: database-ca-cert
         secret:
           secretName: database-ca-cert
