Deescalate privileges for multiple deployments
- `cf-api-server` deployment has had its k8s API privileges deescalated
- `cf-api-worker` deployment has had its k8s API privileges deescalated
- `cf-api-kpack-watcher` deployment has had its k8s API privileges
deescalated
  - Modified its source too to only concerns itself with Kpack builds
  from the staging namespace instead of all builds in the cluster
- Renamed service accounts to match their deployment names (e.g.
cc-api-service-account => cf-api-server-service-account)
- Roles are named following what appears to be some naming convention
with the default k8s roles
  - Prefix the managing component/system onto the role name (e.g.
  `system:cluster-admin` or `cf:cf-specific-thing-doer`)

[#171735131]

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -78,7 +78,7 @@ spec:
         - name: statsd-exporter
           image: #@ data.values.images.statsd_exporter
           imagePullPolicy: Always
-      serviceAccountName: cc-api-service-account
+      serviceAccountName: cf-api-server-service-account
       volumes:
       - name: server-sock
         emptyDir: {}
