teach makefile to install kubebuilder when it's not present
- also remove buildren from mysterious role yml
- go fmt

[#172847399]

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Chris Selzo <cselzo@pivotal.io>

--- a/src/cf-api-kpack-watcher/config/rbac/role.yaml
+++ b/src/cf-api-kpack-watcher/config/rbac/role.yaml
@@ -7,9 +7,9 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - build.pivotal.io.build.pivotal.io
+  - build.pivotal.io
   resources:
-  - buildren
+  - builds
   verbs:
   - create
   - delete
@@ -19,9 +19,9 @@ rules:
   - update
   - watch
 - apiGroups:
-  - build.pivotal.io.build.pivotal.io
+  - build.pivotal.io
   resources:
-  - buildren/status
+  - builds/status
   verbs:
   - get
   - patch
