Dev scripts build watcher with `pack` CLI
- This will ensure building the watcher image is always consistent since
we also use `pack` CLI in our CI

[#172847399]

Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Renee Chu <rchu@pivotal.io>

--- a/dev-templates/kbld.yml
+++ b/dev-templates/kbld.yml
@@ -9,8 +9,14 @@ sources:
     path: #@ data.values.src_dirs.ccng
   - imageRepo: cloudfoundry/capi-kpack-watcher
     path: #@ data.values.src_dirs.capi_kpack_watcher
+    pack:
+      build:
+        builder: cloudfoundry/cnb:bionic
   - imageRepo: #@ data.values.kbld.destination.capi_kpack_watcher
     path: #@ data.values.src_dirs.capi_kpack_watcher
+    pack:
+      build:
+        builder: cloudfoundry/cnb:bionic
 ---
 apiVersion: kbld.k14s.io/v1alpha1
 kind: ImageDestinations
