Add missing namespace to database-ca-cert
See cloudfoundry/cf-for-k8s#274

Co-authored-by: Philipp Stehle <philipp.stehle@sap.com>

--- a/templates/database-ca-cert-secret.yml
+++ b/templates/database-ca-cert-secret.yml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: database-ca-cert
+  namespace: #@ data.values.system_namespace
 type: Opaque
 data:
   ca.crt: #@ base64.encode(data.values.ccdb.ca_cert)
