raise memory limits and requests for:
- API server (previously always 300-400% of requested)
- local and generic worker (same as above)
- kpack-watcher (getting OOM killed during baras)

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Nat Bennett <nbennett@pivotal.io>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -29,6 +29,11 @@ spec:
         - name: cf-api-server
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: 300Mi
+            limits:
+              memory: 1.2Gi
           volumeMounts:
           - name: server-sock
             mountPath: /data/cloud_controller_ng
@@ -52,6 +57,11 @@ spec:
         - name: cf-api-local-worker
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: 300Mi
+            limits:
+              memory: 1.2Gi
           command: ["/usr/local/bin/bundle"]
           args: ["exec", "rake", "jobs:local"]
           volumeMounts:
