Image controller updates StatefulSet on stack changes
- Also tried to proactively incorporate our fixes from the Build
controller for when a create and update occurs in rapid succession
- Manager now requires another environment variable to start up (an
environment variable to configure what namespace the StatefulSets are
in)

[#172467790]

Co-authored-by: Piyali Banerjee <pbanerjee@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/controllers_deployment.yml
+++ b/templates/controllers_deployment.yml
@@ -37,6 +37,8 @@ spec:
           value: #@ "http://capi.{}.svc.cluster.local".format(data.values.system_namespace)
         - name: STAGING_NAMESPACE
           value: #@ data.values.staging_namespace
+        - name: WORKLOADS_NAMESPACE
+          value: #@ data.values.workloads_namespace
         resources:
           limits:
             cpu: 100m
