--- a/templates/service-accounts.yml
+++ b/templates/service-accounts.yml
@@ -161,6 +161,20 @@ rules:
   - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: "cf:statefulsets-updater"
+rules:
+- apiGroups:
+  - apps
+  resources:
+  - statefulsets
+  verbs:
+  - list
+  - update
+  - patch
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: cf-api-controllers-service-account-kpack-builds-reader
@@ -186,6 +200,20 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: "cf:service-accounts-secrets-fetcher"
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cf-api-kpack-watcher-service-account-statefulsets-updater
+  namespace: #@ data.values.workloads_namespace
+subjects:
+- kind: ServiceAccount
+  name: cf-api-kpack-watcher-service-account
+  namespace: #@ data.values.system_namespace
+roleRef:
+  kind: ClusterRole
+  name: "cf:statefulsets-updater"
   apiGroup: rbac.authorization.k8s.io
 
 #! kpack registry credentials
