remove opi certificates from capi-k8s-release
- have capi communicate over envoy-encrypted plaintext

[#173905990]

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/ccng-config.lib.yml
+++ b/templates/ccng-config.lib.yml
@@ -342,13 +342,10 @@ diego:
   use_privileged_containers_for_staging: false
 
 opi:
-  url: #@ "https://eirini.{}.svc.cluster.local:8085".format(data.values.system_namespace)
+  url: #@ "http://eirini.{}.svc.cluster.local:8080".format(data.values.system_namespace)
   opi_staging: true
   enabled: true
   cc_uploader_url: "https://TODO.TODO"
-  ca_file: /config/eirini/certs/tls.ca
-  client_cert_file: /config/eirini/certs/tls.crt
-  client_key_file: /config/eirini/certs/tls.key
 
 perm:
   enabled: false
