Use k8s secrets for CAPI creds
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>
Co-authored-by: Matt Royal <mroyal@pivotal.io>

--- a/templates/secrets-file.yml
+++ b/templates/secrets-file.yml
@@ -10,7 +10,20 @@ metadata:
 data:
   #! TODO: maybe extract this into a lib?
   secrets.yml: |
+    #! TODO: template these filepaths?
+    cloud_controller_username_lookup_client_secret: /etc/cf-api/username-lookup-client-secret/password
     db:
       database:
-        #! TODO: template this?
-        password: /etc/capi/ccdb/password
+        password: /etc/cf-api/ccdb/password
+    resource_pool:
+      fog_connection:
+        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
+    packages:
+      fog_connection:
+        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
+    droplets:
+      fog_connection:
+        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
+    buildpacks:
+      fog_connection:
+        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
