--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -1,4 +1,6 @@
 #@ load("@ytt:data", "data")
+#@ load("@ytt:template", "template")
+#@ load("secrets.lib.yml","shared_config_volumes", "shared_config_volume_mounts")
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -41,14 +43,9 @@ spec:
             limits:
               memory: 1.2Gi
           volumeMounts:
+          - #@ template.replace(shared_config_volume_mounts())
           - name: server-sock
             mountPath: /data/cloud_controller_ng
-          - name: cloud-controller-ng-yaml
-            mountPath: /config/cloud_controller_ng.yml
-            subPath: cloud_controller_ng.yml
-          - name: cloud-controller-ng-secrets-yaml
-            mountPath: /config/secrets.yml
-            subPath: secrets.yml
           #@ if/end data.values.uaa.serverCerts.secretName:
           - name: uaa-certs
             mountPath: /config/uaa/certs
@@ -64,22 +61,21 @@ spec:
           #@ if/end data.values.metric_proxy.ca.secret_name:
           - name: metric-proxy-ca
             mountPath: /config/metric_proxy/ca
-          #@ if/end data.values.ccdb.password_secret_name:
-          - name: capi-db-password
-            mountPath: /etc/capi/ccdb
         - name: cf-api-local-worker
           image: #@ data.values.images.ccng
           imagePullPolicy: Always
+          command: ["/usr/local/bin/bundle"]
+          args: ["exec", "rake", "jobs:local"]
+          env:
+          - name: CLOUD_CONTROLLER_NG_SECRETS
+            value: /config/secrets.yml
           resources:
             requests:
               memory: 300Mi
             limits:
               memory: 1.2Gi
-          command: ["/usr/local/bin/bundle"]
-          args: ["exec", "rake", "jobs:local"]
           volumeMounts:
-          - name: cloud-controller-ng-yaml
-            mountPath: /config/
+          - #@ template.replace(shared_config_volume_mounts())
           - name: nginx-uploads
             mountPath: /tmp/uploads
           #@ if/end data.values.ccdb.ca_cert:
@@ -109,11 +105,9 @@ spec:
           imagePullPolicy: Always
       serviceAccountName: cf-api-server-service-account
       volumes:
+      - #@ template.replace(shared_config_volumes())
       - name: server-sock
         emptyDir: {}
-      - name: cloud-controller-ng-yaml
-        configMap:
-          name: cloud-controller-ng-yaml
       - name: nginx
         configMap:
           name: nginx
@@ -141,10 +135,4 @@ spec:
           secretName: #@ data.values.metric_proxy.ca.secret_name
       - name: nginx-uploads
         emptyDir: {}
-      - name: cloud-controller-ng-secrets-yaml
-        configMap:
-          name: cloud-controller-ng-secrets-yaml
-      - name: capi-db-password
-        secret:
-          secretName: #@ data.values.ccdb.password_secret_name
 
