--- a/templates/ccdb-migrate-job.yaml
+++ b/templates/ccdb-migrate-job.yaml
@@ -1,4 +1,6 @@
 #@ load("@ytt:data", "data")
+#@ load("@ytt:template", "template")
+#@ load("secrets.lib.yml","shared_config_volumes", "shared_config_volume_mounts")
 ---
 apiVersion: batch/v1
 kind: Job
@@ -21,17 +23,17 @@ spec:
           bundle exec rake db:wait_for_istio && \
           bundle exec rake db:setup_database && \
           bundle exec rake db:terminate_istio
+        env:
+        - name: CLOUD_CONTROLLER_NG_SECRETS
+          value: /config/secrets.yml
         volumeMounts:
-        - name: cloud-controller-ng-yaml
-          mountPath: /config
+        - #@ template.replace(shared_config_volume_mounts())
         #@ if/end data.values.ccdb.ca_cert:
         - name: database-ca-cert
           mountPath: /config/database/certs
       restartPolicy: OnFailure
       volumes:
-      - name: cloud-controller-ng-yaml
-        configMap:
-          name: cloud-controller-ng-yaml
+      - #@ template.replace(shared_config_volumes())
       #@ if/end data.values.ccdb.ca_cert:
       - name: database-ca-cert
         secret:
