Extract secret mount points into variables
Also move the contents of secrets.yml into a lib file, similar to how we
handle ccng's config map.

[#173973874]

Authored-by: Matt Royal <mroyal@pivotal.io>

--- a/templates/secrets-file.yml
+++ b/templates/secrets-file.yml
@@ -1,4 +1,6 @@
 #@ load("@ytt:data","data")
+#@ load("@ytt:yaml","yaml")
+#@ load("secrets.lib.yml", "ccng_secrets")
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -8,22 +10,4 @@ metadata:
   annotations:
     kapp.k14s.io/versioned: ""
 data:
-  #! TODO: maybe extract this into a lib?
-  secrets.yml: |
-    #! TODO: template these filepaths?
-    cloud_controller_username_lookup_client_secret: /etc/cf-api/username-lookup-client-secret/password
-    db:
-      database:
-        password: /etc/cf-api/ccdb/password
-    resource_pool:
-      fog_connection:
-        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
-    packages:
-      fog_connection:
-        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
-    droplets:
-      fog_connection:
-        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
-    buildpacks:
-      fog_connection:
-        aws_secret_access_key: /etc/cf-api/blobstore/secret-access-key/password
+  secrets.yml: #@ yaml.encode(ccng_secrets())
