--- a/templates/secrets.lib.yml
+++ b/templates/secrets.lib.yml
@@ -18,6 +18,14 @@
     secretName: #@ data.values.blobstore.secret_access_key_secret_name
 #@ end
 
+---
+
+#@ ccdb_mount_path = "/etc/cf-api/ccdb"
+#@ cf_api_username_lookup_client_secret_mount_path = "/etc/cf-api/username-lookup-client-secret"
+#@ cf_api_blobstore_secret_access_key_mount_path = "/etc/cf-api/blobstore/secret-access-key"
+
+---
+
 #@ def shared_config_volume_mounts():
 - name: cloud-controller-ng-yaml
   mountPath: /config/cloud_controller_ng.yml
@@ -27,9 +35,30 @@
   subPath: secrets.yml
 #! secrets for credentials used in config
 - name: cf-api-db-password
-  mountPath: /etc/cf-api/ccdb
+  mountPath: #@ ccdb_mount_path
 - name: cf-api-username-lookup-client-secret
-  mountPath: /etc/cf-api/username-lookup-client-secret
+  mountPath: #@ cf_api_username_lookup_client_secret_mount_path
 - name: cf-api-blobstore-secret-access-key
-  mountPath: /etc/cf-api/blobstore/secret-access-key
+  mountPath: #@ cf_api_blobstore_secret_access_key_mount_path
+#@ end
+
+---
+
+#@ def ccng_secrets():
+cloud_controller_username_lookup_client_secret:  #@ cf_api_username_lookup_client_secret_mount_path + "/password"
+db:
+  database:
+    password: #@ ccdb_mount_path + "/password"
+resource_pool:
+  fog_connection:
+    aws_secret_access_key: #@ cf_api_blobstore_secret_access_key_mount_path + "/password"
+packages:
+  fog_connection:
+    aws_secret_access_key:  #@ cf_api_blobstore_secret_access_key_mount_path + "/password"
+droplets:
+  fog_connection:
+    aws_secret_access_key:  #@ cf_api_blobstore_secret_access_key_mount_path + "/password"
+buildpacks:
+  fog_connection:
+    aws_secret_access_key:  #@ cf_api_blobstore_secret_access_key_mount_path + "/password"
 #@ end
