--- a/templates/ccdb-migrate-job.yaml
+++ b/templates/ccdb-migrate-job.yaml
@@ -1,6 +1,6 @@
 #@ load("@ytt:data", "data")
 #@ load("@ytt:template", "template")
-#@ load("secrets.lib.yml","shared_config_volumes", "shared_config_volume_mounts")
+#@ load("secrets.lib.yml","shared_config_volumes", "shared_config_volume_mounts", "ccng_config_mount_path", "ccng_secrets_mount_path")
 ---
 apiVersion: batch/v1
 kind: Job
@@ -24,8 +24,10 @@ spec:
           bundle exec rake db:setup_database && \
           bundle exec rake db:terminate_istio
         env:
+        - name: CLOUD_CONTROLLER_NG_CONFIG
+          value: #@ ccng_config_mount_path
         - name: CLOUD_CONTROLLER_NG_SECRETS
-          value: /config/secrets.yml
+          value: #@ ccng_secrets_mount_path
         volumeMounts:
         - #@ template.replace(shared_config_volume_mounts())
         #@ if/end data.values.ccdb.ca_cert:
