--- a/templates/secrets.lib.yml
+++ b/templates/secrets.lib.yml
@@ -20,6 +20,8 @@
 
 ---
 
+#@ ccng_config_mount_path = "/config/cloud_controller_ng.yml"
+#@ ccng_secrets_mount_path = "/config/secrets.yml"
 #@ ccdb_mount_path = "/etc/cf-api/ccdb"
 #@ cf_api_username_lookup_client_secret_mount_path = "/etc/cf-api/username-lookup-client-secret"
 #@ cf_api_blobstore_secret_access_key_mount_path = "/etc/cf-api/blobstore/secret-access-key"
@@ -28,16 +30,21 @@
 
 #@ def shared_config_volume_mounts():
 - name: cloud-controller-ng-yaml
-  mountPath: /config/cloud_controller_ng.yml
+  mountPath: #@ ccng_config_mount_path
   subPath: cloud_controller_ng.yml
+
 - name: cloud-controller-ng-secrets-yaml
-  mountPath: /config/secrets.yml
+  mountPath: #@ ccng_secrets_mount_path
   subPath: secrets.yml
+
 #! secrets for credentials used in config
+
 - name: cf-api-db-password
   mountPath: #@ ccdb_mount_path
+
 - name: cf-api-username-lookup-client-secret
   mountPath: #@ cf_api_username_lookup_client_secret_mount_path
+
 - name: cf-api-blobstore-secret-access-key
   mountPath: #@ cf_api_blobstore_secret_access_key_mount_path
 #@ end
