Use k8s secret to set UAA_CLIENT_SECRET env var
[#173973896]

Authored-by: Matt Royal <mroyal@pivotal.io>

--- a/templates/controllers_deployment.yml
+++ b/templates/controllers_deployment.yml
@@ -28,7 +28,10 @@ spec:
         image: #@ data.values.images.cf_api_controllers
         env:
         - name: UAA_CLIENT_SECRET
-          value: #@ data.values.uaa.clients.cf_api_controllers.secret
+          valueFrom:
+            secretKeyRef:
+              name: #@ data.values.uaa.clients.cf_api_controllers.secret_name
+              key: password
         - name: UAA_ENDPOINT
           value: #@ "http://uaa.{}.svc.cluster.local:8080".format(data.values.system_namespace)
         - name: UAA_CLIENT_NAME
