have envoy skip metrics port on cf-api-server
- lack of hostname when prom is scraping messes up connectivity

[#174150895]

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Tim Downey <tdowney@pivotal.io>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -21,7 +21,7 @@ spec:
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '9102'
-        prometheus.io/path: 'metrics'
+        traffic.sidecar.istio.io/excludeInboundPorts: "9102"
       labels:
         app.kubernetes.io/name: cf-api-server
     spec:
@@ -103,6 +103,8 @@ spec:
           - name: nginx-uploads
             mountPath: /tmp/uploads
         - name: statsd-exporter
+          ports:
+          - containerPort: 9102
           image: #@ data.values.images.statsd_exporter
           imagePullPolicy: Always
       serviceAccountName: cf-api-server-service-account
