first pass at autoscaling cf-api-server
- scales between 2 and 8 instances
  (max should be configurable in the future)
- max of 5 DB connections per CC to accomodate cf-for-k8s postgres
  (we should make pool size configurable in the future)
- aims for 70% of .8 of a CPU utilization (around 50% of a core per CC)

[#174150895]

Co-authored-by: Connor Braa <cbraa@pivotal.io>
Co-authored-by: Jaskanwal Pawar <jpawar@pivotal.io>

--- a/templates/api_server_deployment.yml
+++ b/templates/api_server_deployment.yml
@@ -40,8 +40,10 @@ spec:
           resources:
             requests:
               memory: 300Mi
+              cpu: 800m
             limits:
               memory: 1.2Gi
+              cpu: 1
           volumeMounts:
           - #@ template.replace(shared_config_volume_mounts())
           - name: server-sock
@@ -74,6 +76,7 @@ spec:
           resources:
             requests:
               memory: 300Mi
+              cpu: 1m
             limits:
               memory: 1.2Gi
           volumeMounts:
@@ -92,6 +95,9 @@ spec:
             httpGet:
               port: 80
               path: "/healthz"
+          resources:
+            requests:
+              cpu: 1m
           volumeMounts:
           - name: nginx
             mountPath: /etc/nginx
@@ -107,6 +113,9 @@ spec:
           - containerPort: 9102
           image: #@ data.values.images.statsd_exporter
           imagePullPolicy: Always
+          resources:
+            requests:
+              cpu: 1m
       serviceAccountName: cf-api-server-service-account
       volumes:
       - #@ template.replace(shared_config_volumes())
