Remove TLS for metric-proxy (#63)
* Revert "Merge pull request #53 from cloudfoundry/revert-51-remove-tls-metric-proxy"

This reverts commit 4b606d7e560af69c529f8cae42d5446e8a2a8566, reversing
changes made to 0ca02ba39e5c6e1d73892ff2bf34e7ba8cf8af10.

Co-authored-by: Lou "THE MAN" Brann <lbrann@vmware.com>

* add certs back to _default.yml

[#173597144]
[finishes #174307225]

Co-authored-by: Lou "THE MAN" Brann <lbrann@vmware.com>

--- a/values/_default.yml
+++ b/values/_default.yml
@@ -93,6 +93,7 @@ kpack:
     password: ""
     repository_prefix: ""
     username: ""
+#! TODO: remove metric_proxy certs after PR to cf-for-k8s
 metric_proxy:
   ca:
     secret_name: null
