make package-image-uploader kbld/pack buildable
[#173343000]

Authored-by: Connor Braa <cbraa@pivotal.io>

--- a/dev-templates/_dev-values.yml
+++ b/dev-templates/_dev-values.yml
@@ -4,6 +4,8 @@ kbld:
   destination:
     ccng: ""
     cf_api_controllers: ""
+    package_image_uploader: ""
 src_dirs:
   ccng: ""
   cf_api_controllers: ""
+  package_image_uploader: ""
